# intel-dashboard

./: .env.example  .gitignore  BUILD-REPORT.txt  README.md  pyproject.toml  start-news-dashboard.sh
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 9a1c0f4b2d31_add_source_ingest_controls.py  fdc4204ffb06_initial_schema.py
app/: config.py  db.py  interests.yaml  main.py  models.py  sources.yaml  templating.py
app/routers/: actions.py  briefing.py  clip.py  content.py  dashboard.py  export.py  feed.py  horoscope.py  ingest.py  notes.py  saved.py  score_debug.py  search.py  source_health.py  sources_admin.py  topics.py
app/services/: adapters.py  briefing.py  clipper.py  clustering.py  derive.py  exporter.py  extractor.py  feedback.py  horoscope.py  ingest.py  lock.py  normalizer.py  paywall.py  queues.py  rss.py  scorer.py  search.py  source_health.py  tagger.py
app/static/: shortcuts.js  style.css
app/templates/: _article_card.html  _briefing.html  _card_list.html  _card_page.html  _help_overlay.html  _horoscope.html  _queue_tabs.html  _source_row.html  archive.html  base.html  clip.html  content.html  index.html  saved.html  score_debug.html  search.html  source_health.html  sources.html  (+1 more)
scripts/: backup_db.py  cron_ingest.py  export_config.py  prune.py  rebuild_fts.py  recalculate_scores.py  seed_sources.py  verify_feeds.py
tests/: conftest.py  test_actions.py  test_adapters.py  test_backup.py  test_briefing.py  test_clipper.py  test_clustering.py  test_config.py  test_content.py  test_cron_cli.py  test_derive.py  test_export_config.py  test_exporter.py  test_feedback.py  test_ingest.py  test_ingest_lock.py  test_models.py  test_normalizer.py  test_notes.py  test_paywall.py  test_prune.py  test_queue_assignment.py  test_recalculate.py  test_routes.py  test_rss.py  test_saved.py  test_score_debug.py  test_scorer.py  test_search.py  test_seed.py  test_source_health.py  test_sources_admin.py  test_tagger.py
(+1 files in other folders)
