[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "intel-dashboard"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy>=2.0",
    "alembic",
    "httpx",
    "feedparser",
    "trafilatura",
    "beautifulsoup4",
    "pydantic-settings",
    "pyyaml",
    "filelock",
    "jinja2",
    "python-multipart",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "respx",
    "pytest-asyncio",
    "anyio",
]

[tool.setuptools]
packages = ["app"]

[tool.setuptools.package-data]
app = ["*.html", "*.css", "*.js", "*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
