[build-system]
requires = ["setuptools>=75,<81"]
build-backend = "setuptools.build_meta"

[project]
name = "intel-dashboard"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<0.137",
    "starlette>=0.46,<0.47",
    "uvicorn[standard]>=0.30,<0.49",
    "sqlalchemy>=2.0,<2.1",
    "alembic>=1.13,<1.19",
    "httpx>=0.27,<0.29",
    "feedparser>=6.0,<7",
    "trafilatura>=2.0,<3",
    "beautifulsoup4>=4.12,<5",
    "pydantic-settings>=2.5,<3",
    "pyyaml>=6,<7",
    "filelock>=3.15,<4",
    "jinja2>=3.1,<4",
    "python-multipart>=0.0.9,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<10",
    "respx>=0.21,<0.24",
    "pytest-asyncio>=0.24,<2",
    "anyio>=4.4,<4.10",
    "ruff>=0.9,<1",
]

[tool.setuptools.packages.find]
include = ["app*", "scripts*"]

[tool.setuptools.package-data]
app = ["*.yaml", "templates/*.html", "static/*.css", "static/*.js", "static/vendor/*.js"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E9", "F"]
ignore = ["F401", "F841"]
